--- a/.github/workflows/createdisk.yml
+++ b/.github/workflows/createdisk.yml
@@ -1,10 +1,19 @@
 on:
   workflow_call:
 jobs:
-   create_disks:
+  build:
     runs-on: ubuntu-latest
-    steps:
-     - name: 'Checkout'
-       uses: actions/checkout@v3
+    strategy:
+          steps:
+            -name: 'Checkout'
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+      - name: Display Python version
+        run: python -c "import sys; print(sys.version)"
+     - name: 'Install requirements.txt'
+        run: pip3 install requirements.txt
      - name: 'list disks in project'
-       run: python3 disks.py '${{ secrets.GCP_PrOJECT_ID}}' -l
+       run: python3 disks.py '${{ secrets.GCP_PROJECT_ID}}' -l
