--- a/.github/workflows/createdisk.yml
+++ b/.github/workflows/createdisk.yml
@@ -2,18 +2,20 @@ on:
   workflow_call:
 jobs:
   build:
+
     runs-on: ubuntu-latest
-    strategy:
-          steps:
-            -name: 'Checkout'
+
+    steps:
       - uses: actions/checkout@v3
       - name: Set up Python 3.x
         uses: actions/setup-python@v4
         with:
+          # Semantic version range syntax or exact version of a Python version
           python-version: '3.x'
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
-     - name: 'Install requirements.txt'
-        run: pip3 install requirements.txt
-     - name: 'list disks in project'
-       run: python3 disks.py '${{ secrets.GCP_PROJECT_ID}}' -l
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+       # run: python3 disks.py '${{ secrets.GCP_PROJECT_ID}}' -l
