--- a/.github/workflows/createdisk.yml
+++ b/.github/workflows/createdisk.yml
@@ -18,4 +18,5 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-       # run: python3 disks.py '${{ secrets.GCP_PROJECT_ID}}' -l
+      - name: list current disks in europe zone west1-b
+        run: python3 disks.py '${{ secrets.GCP_PROJECT_ID}}' -l
